# SnykVulnChecker

./: .gitignore  README.org  SnykVulnChecker.cabal  stack.yaml
src/: Lib.hs
