name:                SnykVulnChecker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SnykVulnChecker#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Uhl
maintainer:          philipp.uhl@rwth-aachen.de
copyright:           2017 Philipp Uhl
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , feed
                     , regex-pcre
                     , html-entities
                     , text
                     , aeson
                     , attoparsec
                     , bytestring
                     , unordered-containers
                     , MissingH
                     , transformers
  default-language:    Haskell2010
  

executable SnykVulnChecker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SnykVulnChecker
  default-language:    Haskell2010

test-suite SnykVulnChecker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SnykVulnChecker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/SnykVulnChecker
